--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ requires-python = ">=3.8"
 "Repository" = "https://github.com/spirometaxas/fractals-cli-py"
 
 [project.scripts]
-"periodic-table-cli" = "fractals_cli.cli:main"
+"fractals-cli" = "fractals_cli.cli:main"
 
 [tool.setuptools]
 packages = ["fractals_cli"]
